<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneLibrary</string>
    <string name="index_button">Enjoy it.</string>
    <string name="index_content">One library is one world.</string>
    <string name="title_activity_main">OneLibrary</string>
    <!--<string name="action_search">Search</string>-->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_clear">Clean</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign out</string>
    <string name="search_hint">Key words</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_detail">Detail</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="input_repassword_hint">Confirm password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_save">Save</string>
    <string name="success">Success</string>
    <string name="loading">Loading&#8230;</string>
    <string name="being_sign_in">Signing in &#8230;</string>
    <string name="being_sign_up">Signing up &#8230;</string>
    <string name="being_save">Saving &#8230;</string>
    <string name="signup_success">Success to sign up, please sign in.</string>
    <string name="logout_alert_tip">Are you sure to sign out, continue?</string>

    <string name="login_url">/Api/Public/login</string>
    <string name="signup_url">/Api/Public/register</string>
    <string name="get_messages_url">/Api/Index/messages</string>
    <string name="get_message_detail_url">/Api/Index/message</string>
    <string name="update_url">/Api/Index/get_update_info</string>
    <string name="get_profile_options_url">/Api/User/get_profile_options</string>
    <string name="get_profile_url">/Api/User/get_profile</string>
    <string name="update_profile_url">/Api/User/update_profile</string>
    <string name="baidu_map_convert_url">http://api.map.baidu.com/ag/coord/convert</string>
    <string name="connection_error">Connection Error.</string>
    <string name="title_activity_location">Location</string>
    <string name="action_location">Location</string>
    <string name="login_failure">Failure to login.</string>

    <string name="location_alert_title">Location Settings</string>
    <string name="location_alert_content">Location service is disabled, Do you want to enabled it?</string>
    <string name="location_alert_settings_btn">Settings</string>
    <string name="location_alert_cancel_btn">Cancel</string>

    <string name="network_connected">Network Connected</string>
    <string name="network_disconnected">Network Disconnected</string>
    <string name="lost_connection">Lost Connection</string>
    <string name="access_failure">Failure to access to service.</string>

    <string name="notification_title">New Notification</string>
    <string name="notification_content">You have new messages.</string>

    <string name="del_dialog_content">Delete the message?</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>

    <string name="backpressed_tip">Press once again to exit.</string>

    <string name="tip_updated">Updated</string>
    <string name="tip_messages">message(s).</string>

    <string name="update_alert_title">Do you update to the latest?</string>
    <string name="update_source">www.onelibrary.cn</string>

    <string name="profile">Profile</string>
    <string name="profile_grade">Grade</string>
    <string name="profile_major">Major</string>
    <string name="profile_research">Research</string>
    <string name="profile_interest">Interest</string>
    <string name="profile_project">Project</string>
    <string name="profile_curricula">Curricula</string>
    <string name="profile_text_tip">Please separate by comma as more.</string>
    <string name="title_activity_profile">Profile</string>

</resources>
