<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.onelibrary.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:hint="@string/input_email_hint" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:hint="@string/input_password_hint" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:hint="@string/input_repassword_hint" />

    <org.onelibrary.ui.processbutton.iml.ActionProcessButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_sign_up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="@string/success"
        custom:pb_textProgress="@string/being_sign_up" />

    </LinearLayout>
</RelativeLayout>
