<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.onelibrary.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <ImageView android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:src="@drawable/user"
            android:contentDescription="Logo"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:hint="@string/input_email_hint" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:hint="@string/input_password_hint" />

        <org.onelibrary.ui.processbutton.iml.ActionProcessButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="4dp"
            android:text="@string/button_sign_in"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            custom:pb_colorComplete="@color/blue_normal"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/button_sign_in"
            custom:pb_textProgress="@string/being_sign_in" />

    </LinearLayout>

    <Button android:id="@+id/regBtn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/button_sign_up"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
