<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.onelibrary.ProfileActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_grade"
        android:id="@+id/gradeTextView"
        android:textColor="@color/black_overlay"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gradeSpinner"
        android:layout_below="@+id/gradeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_major"
        android:id="@+id/majorTextView"
        android:textColor="@color/black_overlay"
        android:layout_below="@+id/gradeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/majorSpinner"
        android:layout_below="@+id/majorTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_research"
        android:id="@+id/researchTextView"
        android:textColor="@color/black_overlay"
        android:layout_below="@+id/majorSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/research"
        android:layout_below="@+id/researchTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/majorSpinner"
        android:layout_alignEnd="@+id/majorSpinner"
        android:textSize="16sp"
        android:hint="@string/profile_text_tip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_interest"
        android:id="@+id/interestTextView"
        android:textColor="@color/black_overlay"
        android:layout_below="@+id/research"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interest"
        android:layout_below="@+id/interestTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/research"
        android:layout_alignEnd="@+id/research"
        android:textSize="16sp"
        android:hint="@string/profile_text_tip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_project"
        android:id="@+id/projectTextView"
        android:layout_below="@+id/interest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/project"
        android:layout_below="@+id/projectTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/interest"
        android:layout_alignEnd="@+id/interest"
        android:textSize="16sp"
        android:hint="@string/profile_text_tip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/profile_curricula"
        android:textColor="@color/black_overlay"
        android:id="@+id/curriculaTextView"
        android:layout_below="@+id/project"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/curriculaSpinner"
        android:layout_below="@+id/curriculaTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:textSize="16sp"/>

    <org.onelibrary.ui.processbutton.iml.ActionProcessButton
        android:id="@+id/saveButton"
        android:layout_below="@+id/curriculaSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_save"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        custom:pb_colorComplete="@color/blue_normal"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="@string/button_save"
        custom:pb_textProgress="@string/being_save" />

</RelativeLayout>
